# triton-bert

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: biencoder.py  chitchat.py  crossencoder.py  retrieval_pgvector.py  save_model_for_triton_server.py
examples/config/ernie/: config.json
triton_bert/: model_4_triton.py  save_model_for_triton_server.py  triton_bert.py
triton_bert/model/: bge_m3.py  model_4_triton.py
triton_bert/tests/: test_bge_m3.py  test_biencoder.py  test_crossencoder.py  test_generate_bgem3_triton_model.py  test_generate_triton_bert.py  test_generate_triton_model.py  test_pgvector_triton.py  test_triton_bert.py
triton_bert/tests/dataset/: medical_qa.jsonl
triton_bert/vector_db/: pgvector_triton.py
