[tool.poetry]
name = "triton-bert"
version = "0.3.2"
description = "easy to use bert with nvidia triton inference server"
authors = ["yyw794 <yyw794@126.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
tritonclient = {extras = ["grpc", "http"], version = "^2.41.0"}
transformers = "^4.36.2"
more-itertools = "^10.1.0"
protobuf = "^4.23"
pgvector = "^0.2.4"
sqlmodel = "^0.0.14"
onnx = "^1.15.0"
psycopg2-binary = "^2.9.9"
jsonlines = "^4.0.0"


[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
